# rust_bloc_notes_app

./: Cargo.toml  blocNotesBS.db
front/: auth.html  index.html
front/css/: style.css
front/js/: auth.js  notes.js
src/: auth.rs  bs.env  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
